# furigana

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: api.hpp  args.hpp  check.hpp  commit.hpp  generate.hpp  handler.hpp  recurse.hpp  result_t.hpp  utf8.hpp
src/: api.cpp  args.cpp  check.cpp  commit.cpp  default_config.cpp  generate.cpp  handler.cpp  main.cpp  recurse.cpp  utf8.cpp
